feat: rates api with tests
Closes #97
